Changelog for mSearch2.

1.3.0 pl
==============
- [mFilter2] Added filters "month" and "day".
- [mFilter2] Ability to use one field multiple times in filters.
- [mFilter2] Improved suggestions for more optimal processing.
- [mFilter2] Fixed suggestions for dates filters.

1.2.7 pl
==============
- [mFilter2] Fixed search with &parents parameter.

1.2.6 pl
==============
- [mSearch2] Improved simple search for additional bonuses.

1.2.5 pl
==============
- [#34] [mSearchForm] Fixed &autocomplete=`0`.

1.2.4 pl1
==============
- [mFilter2] Fixed adding new filters from build methods.
- [mFilter2] Fixed possible E_NOTICE.

1.2.3 pl2
==============
- [#33] [mFilter2] Fixed build of TVs filters.
- [mFilter2] Fixed limit on search.
- [mFilter2] Fixed displaying of empty filters on page.

1.2.2 pl
==============
- [mFilter2] Fixed display order of specified &filters.
- [Main] Removed register of jQuery on frontend.

1.2.1 pl
==============
- [mFilter2] Added support of "autotag" TVs.

1.2.0 pl
==============
- [mFilter2] Added triggering of jQuery event "mse2_load".
- [mFilter2] Added support of pdoTools 1.10.
- [mFilter2] Added filter "decimal".
- [mFilter2] Fixed default javascript for decimal values in slider.
- [mFilter2] Fixed search in filter.

1.2.0 rc1
==============
- [mFilter2] Ability to add new filters from build methods.
- [mFilter2] Support of special options of miniShop2 products in "key==value" format.

1.1.5 pl1
==============
- [#11] Added support of msVendor.
- Improved processing of tags in quick search.

1.1.4 pl1
==============
- Fixed pagination links in ajax requests.

1.1.3 pl
==============
- Improved indexing manager page.

1.1.2 pl
==============
- [mSearch2] Fixed parameter &toPlaceholder.

1.1.1 pl
==============
- Changed sort of parents filters to menuindex.
- Fixed autocomplete when unpublished resources are found.
- Fixed retrieving of resource fields.

1.1.0 pl
==============
- Improved search index and algorithm.