@@ -1,5 +1,5 @@
 <div class="form-group col-md-6">
 	<label for="mse2_[[+table]][[+delimeter]][[+filter]]_[[+idx]]">[[+title]]
-		<input type="input" name="[[+table]][[+delimeter]][[+filter]]" id="mse2_[[+table]][[+delimeter]][[+filter]]_[[+idx]]" value="[[+value]]" class="form-control input-sm" />
+		<input type="input" name="[[+filter_key]]" id="mse2_[[+table]][[+delimeter]][[+filter]]_[[+idx]]" value="[[+value]]" class="form-control input-sm" />
 	</label>
 </div>
