@@ -47,6 +47,7 @@ $_lang['mse2_prop_resources'] = 'Список ресурсов для вывод
 $_lang['mse2_prop_showEmptyFilters'] = 'Показывать фильтры всего с одним значением.';
 $_lang['mse2_prop_sort'] = 'Список полей ресурса для сортировки. Указывается в формате "таблица|поле:направление". Можно указывать несколько полей через запятую, например: "resource:publisedon:desc,ms|price:asc".';
 $_lang['mse2_prop_filters'] = 'Список фильтров ресурсов, через запятую. Указывается в формате "таблица|поле:метод". По умолчанию: "resource|parent:parents".';
+$_lang['mse2_prop_aliases'] = 'Список псевдонимов для фильтров, которые будут использованы в URL фильтра, через запятую. Указывается в формате "таблица|поле==псевдоним". Например: "resource|parent==category".';
 $_lang['mse2_prop_suggestions'] = 'Этот параметр включает предположительное количество результатов, которое показывается возле каждого фильтра. Отключите, если вы недовольны скоростью фильтрации.';
 $_lang['mse2_prop_suggestionsMaxFilters'] = 'Максимальное количество фильтров, для которых работают предварительные результаты. Если фильтров будет больше - suggestions отключатся.';
 $_lang['mse2_prop_suggestionsMaxResults'] = 'Максимальное количество ресурсов, для которых работают предварительные результаты. Если ресурсов будет больше - suggestions отключатся.';
